# ParallelComputing_PatternRecogniton

./: CMakeLists.txt  CSVreader.cpp  CSVreader.h  ParallelRecognition.cpp  ParallelRecognition.h  README.md  SAD.cpp  SAD.h  SequentialRecognition.cpp  SequentialRecognition.h  main.cpp
Results/: benchmark_threads_20260102-170016.txt  benchmark_threads_20260102-173032.txt  benchmark_threads_20260102-174402.txt  results-20251121-172606.txt  results-20251121-172746.txt  results-20251121-181205.txt  results-20251121-210337.txt
data/: query.csv  series_1.csv  series_10.csv  series_100.csv  series_1000.csv  series_101.csv  series_102.csv  series_103.csv  series_104.csv  series_105.csv  series_106.csv  series_107.csv  series_108.csv  series_109.csv  series_11.csv  series_110.csv  series_111.csv  series_112.csv  series_113.csv  series_114.csv  series_115.csv  series_116.csv  series_117.csv  series_118.csv  series_119.csv  series_12.csv  series_120.csv  series_121.csv  series_122.csv  series_123.csv  series_124.csv  series_125.csv  series_126.csv  series_127.csv  series_128.csv  series_129.csv  series_13.csv  series_130.csv  series_131.csv  series_132.csv  (+961 more)
